# skin-traige-fullstack

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  turbo.json
.cursor/: scratchpad.md
apps/api/: README.md  main.py  pyproject.toml  requirements.txt
apps/api/main/: app.py
apps/api/static/: index.html
apps/api/static/assets/: index-19b1ac9b.js  index-a98adb2f.css
apps/web/: .npmrc  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  config.ts  main.tsx
apps/web/src/components/: Footer.css  Footer.tsx  Header.css  Header.tsx  ImageUploader.css  ImageUploader.tsx
