[project]
name = "skin-triage-api"
version = "0.1.0"
description = "Skin triage API service"
authors = [
    "Clinikly"
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "skin-triage-api"
version = "0.1.0"
description = "Skin triage API service"
authors = ["Clinikly"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.15.0,<0.19.0"
pillow = ">=11.2.1,<12.0.0"
python-multipart = ">=0.0.20,<0.0.21"
skin-triage-model = {path = "../../packages/model", develop = true}
numpy = ">=2.2.5,<3.0.0"
